# simple_fastfloat_benchmark

./: .gitignore  CMakeLists.txt  README.md  run_bench.sh
.github/workflows/: ubuntu.yml  vs.yml
benchmarks/: CMakeLists.txt  apple_arm_events.h  benchmark.cpp  benchmark32.cpp  dtoa.c  event_counter.h  linux-perf-events.h  random_generators.h  string_format.h  to_chars.cpp
data/: canada_short.txt  contrived.txt  generate_malformed.py
fast_float/: CMakeLists.txt  README.md
fast_float/include/: ascii_number.h  float_common.h  parse_number.h  tables_positive.h  thompson_tao.h
fast_float/include/fast_float/: ascii_number.h  decimal_to_binary.h  fast_table.h  float_common.h  parse_number.h  tables_negative.h  tables_positive.h  thompson_tao.h
fast_float/script/: analysis.py  table_generation.py
fast_float/tests/: CMakeLists.txt  basictest.cpp  example_test.cpp  exhaustive32.cpp  exhaustive32_64.cpp  exhaustive32_midpoint.cpp  long_exhaustive32.cpp  long_exhaustive32_64.cpp  long_random64.cpp  long_test.cpp  random64.cpp  random_string.cpp  string_test.cpp  test.cpp
